# CMake_tutorial

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Animal.cpp  CMakeLists.txt  main.cpp
src/Animals/: Animal.h  CMakeLists.txt
src/Vehicles/: CMakeLists.txt  Vehicle.cpp  Vehicle.h
tests/: Animal_tests.cpp  CMakeLists.txt  Vehicle_tests.cpp
